5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1593_1802.log
== TEST (2019-03-21 19:38:05) 
-- CODE:
from< math >import*
-- ERROR:
File "XXXX", line 1
    from< math >import*
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:38:39) 
-- CODE:
from< math >import*
print(pi)
-- ERROR:
File "XXXX", line 1
    from< math >import*
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:38:49) 
-- CODE:
from<math>import*
print(pi)
-- ERROR:
File "XXXX", line 1
    from<math>import*
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:39:56) 
-- CODE:

print(pi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(pi)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:40:43) 
-- CODE:
from<math>import*
print(pi)
-- ERROR:
File "XXXX", line 1
    from<math>import*
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:41:02) 
-- CODE:
from <math> import*
print(pi)
-- ERROR:
File "XXXX", line 1
    from <math> import*
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:42:04) 
-- CODE:
from <math> import*

print(pi)
-- ERROR:
File "XXXX", line 1
    from <math> import*
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:38:50) 
-- CODE:
from <math> import*

d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = (5*d1)**0.5 + pi**d2/3
print(daNO)
-- ERROR:
File "XXXX", line 1
    from <math> import*
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:39:08) 
-- CODE:
from math import*

d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = (5*d1)**0.5 + pi**d2/3
print(dano)
-- OUTPUT:
32.66997415288039
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:40:15) 
-- CODE:
from math import*
vida = int(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = (5*d1)**0.5 + pi**d2/3
print(vida - dano)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:40:22) 
-- CODE:
from math import*
vida = int(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = (5*d1)**0.5 + pi**d2/3
print(vida - dano)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:40:44) 
-- CODE:
from math import*
vida = int(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = (5*d1)**0.5 + pi**d2/3
print(vida - dano)
-- EXECUTION TIME:
0.164685
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122.69913250260117
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25.94029010015305
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496.7167344713036
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:42:08) 
-- CODE:
from math import*
vida = int(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = (5*d1)**0.5 + pi**d2/3
print(vida - dano)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:42:57) 
-- CODE:
from math import*
vida = int(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = (5*d1)**0.5 + pi**d2/3
print(vida - dano)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:44:24) 
-- CODE:
from math import*
vida = int(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = [(5*d1)**0.5 + pi**d2/3]
print(vida - dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(vida - dano)
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:44:53) 
-- CODE:
from math import*
vida = int(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = [(5*d1)**0.5 + pi**d2/3]
print( dano)
-- OUTPUT:
[322.6991325026012]
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:46:13) 
-- CODE:
from math import*
vida = float(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = (5*d1)**0.5 + pi**d2/3
print( dano)
-- OUTPUT:
322.6991325026012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:46:38) 
-- CODE:
from math import*
vida = float(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = int(5*d1)**0.5 + pi**d2/3
print( dano)
-- OUTPUT:
322.6991325026012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:47:07) 
-- CODE:
from math import*
vida = float(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = int[(5*d1)**0.5 + pi**d2/3]
print( dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = int[(5*d1)**0.5 + pi**d2/3]
TypeError: 'type' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:51:16) 
-- CODE:
from math import*
vida = float(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = ((5*d1)**0.5 + pi**d2/3)
print( dano)
-- OUTPUT:
322.6991325026012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:53:07) 
-- CODE:
from math import*
vida = float(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = ((5*d1)**0.5 + pi**d2/3)
print(vida - dano)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:08) 
-- CODE:
from math import*
vida = float(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = abs((5*d1)**0.5 + pi**(d2/3))
danototal = int(dano)
print(vida - danototal)
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:55:20) 
-- CODE:
from math import*
vida = float(input("vida inicial do monstro: "))
d1 = int(input("numero do dado 1: "))
d2 = int(input("numero do dado 2: "))
dano = abs((5*d1)**0.5 + pi**(d2/3))
danototal = int(dano)
print(vida - danototal)
-- EXECUTION TIME:
0.169928
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
